--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wallet.storage/did-sshpk",
   "type": "module",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "lib/index.js",
   "exports": {
     ".": {
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "test": "glob -c 'node --import tsx --test' '*.test.*'",
-    "tsc": "tsc --build",
+    "tsc": "npx tsc --build",
     "prepare": "npm run tsc"
   },
   "license": "MIT",
