--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "exports": {
     ".": {
-      "types": "./index.ts",
+      "types": "./lib/index.d.ts",
       "default": "./lib/index.js"
     }
   },
